--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -108,7 +108,7 @@ img {
 header {
   width:270px;
   float:left;
-  position:fixed;
+  position:static;
   padding: 10px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
