--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,7 +3,7 @@
 
 body {
   background-color: #fff;
-  padding:20px;
+  padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
@@ -56,8 +56,7 @@ a:hover small {
 }
 
 .wrapper {
-  width: auto;
-  max-width: 860px;
+  width:860px;
   margin:0 auto;
 }
 
@@ -108,7 +107,7 @@ img {
 header {
   width:270px;
   float:left;
-  padding: 10px;
+  position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
@@ -192,6 +191,7 @@ hr {
 footer {
   width:270px;
   float:left;
+  position:fixed;
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
@@ -199,82 +199,74 @@ footer {
 @media print, screen and (max-width: 960px) {
 
   div.wrapper {
-    width: auto;
-    margin: 0;
-    padding: 10px; /* Reduced padding for more content space */
+    width:auto;
+    margin:0;
   }
 
   header, section, footer {
-    float: none;
-    width: auto; /* Ensures these elements don't overflow the screen width */
+    float:none;
+    position:static;
+    width:auto;
   }
 
   header {
-    padding-right: 0; /* Removed excess padding */
+    padding-right:320px;
   }
 
   section {
-    border: 1px solid #e5e5e5;
-    border-width: 1px 0;
-    padding: 20px 10px; /* Added horizontal padding for alignment */
-    margin: 0 0 20px;
+    border:1px solid #e5e5e5;
+    border-width:1px 0;
+    padding:20px 0;
+    margin:0 0 20px;
   }
 
   header a small {
-    display: inline; /* Keeps the layout inline for smaller screens */
+    display:inline;
   }
 
   header ul {
-    right: 20px; /* Adjusted to avoid being cut off the screen */
-    top: 52px;
+    position:absolute;
+    right:50px;
+    top:52px;
   }
 }
 
 @media print, screen and (max-width: 720px) {
   body {
-    word-wrap: break-word; /* Ensures text fits within the container */
+    word-wrap:break-word;
   }
 
   header {
-    padding: 0 10px; /* Added horizontal padding for consistency */
+    padding:0;
   }
 
   header ul, header p.view {
-    position: static;
+    position:static;
   }
 
   pre, code {
-    word-wrap: normal;
+    word-wrap:normal;
   }
 }
 
 @media print, screen and (max-width: 480px) {
   body {
-    padding: 10px; /* Further reduce padding for very small screens */
+    padding:15px;
   }
 
   .downloads {
-    width: 100%; /* Adjust to full width to prevent cut-off */
+    width:99%;
   }
 
   .downloads li, .downloads li + li + li {
-    width: 33%; /* Ensure button widths are equal and fit the screen */
-    padding: 5px 0; /* Adjusted padding for better tap targets */
-  }
-
-  header {
-    padding: 0; /* Remove padding to maximize space */
+    width:33%;
   }
 }
 
 @media print {
   body {
-    padding: 0.4in;
-    font-size: 12pt;
-    color: #444;
-  }
-  /* Ensure that print styles don't affect screen display */
-  header, section, footer {
-    display: none;
+    padding:0.4in;
+    font-size:12pt;
+    color:#444;
   }
 }
