--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -105,10 +105,12 @@ img {
 }
 
 header {
-  width:270px;
-  float:left;
-  position:fixed;
-  -webkit-font-smoothing:subpixel-antialiased;
+  width: 270px;
+  position: fixed;
+  top: 0; /* Ensure it starts from the top */
+  bottom: 0; /* Stretch to the bottom */
+  overflow-y: auto; /* Enable vertical scrolling */
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 ul.downloads {
@@ -172,9 +174,11 @@ strong {
 }
 
 section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
+  width: 500px;
+  float: right;
+  height: 100vh; /* Set the height to the full view height */
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding-bottom: 50px;
 }
 
 small {
@@ -189,11 +193,10 @@ hr {
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-  -webkit-font-smoothing:subpixel-antialiased;
+  width: 270px;
+  position: fixed;
+  bottom: 0;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -204,9 +207,11 @@ footer {
   }
 
   header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
+    position: static;
+    width: auto;
+    float: none;
+    height: auto; /* Reset height for mobile */
+    overflow-y: visible; /* Disable scrolling for mobile */
   }
 
   header {
