--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,5 +47,15 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script>
+      function showSection(sectionId) {
+          var sections = document.querySelectorAll('.content-section');
+          sections.forEach(function(section) {
+              section.style.display = 'none';
+          });
+          document.getElementById(sectionId).style.display = 'block';
+      }
+      </script>
+      
   </body>
 </html>
